Update documentation, add monitor

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [
     "hackerbay",
-    "interview task",
+    "interview-task",
     "nodejs"
   ],
   "author": "Ikechukwu Kalu",
