--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "./node_modules/.bin/nodejs-dashboard node dev.index.js"
   },
   "repository": {
     "type": "git",
