Modify files to ignore for docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,8 @@
-node_modules/
-README.md
-.gitignore
-*.log
-coverage/
 .nyc_output/
+coverage/
 images/
+node_modules/
+out/
+*.log
+README.md
+TODO
